# centinote

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
html/: editor.html  editor.js  form.js  index.html  login.html  login.js  redirect.html  redirect.js  register.html  register.js  script.js  styles.css  timeline.html  timeline.js  user.html  user.js
html/styles/: editor.css  form.css  global.css  login.css  timeline.css  topbar.css  user-panel.css  warning.css
sql/migrations/: 001_init.sql  002_session_uuid.sql  003_primary_key.sql
src/: handlers.rs  journals.rs  login.rs  main.rs  register.rs  session.rs  state.rs  users.rs  utils.rs
src/app/: journals.rs  mod.rs
src/auth/: login.rs  mod.rs  register.rs  utils.rs
src/backend/: entry.rs  mod.rs  session.rs  user.rs
src/entry/: create.rs  delete.rs  fetch.rs  insert.rs  list.rs  mod.rs  update.rs  utils.rs
src/session/: create.rs  delete.rs  from_request.rs  mod.rs  refresh.rs
src/user/: create.rs  fetch.rs  mod.rs  verify_password.rs
