[package]
name = "centinote"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "migrate", "chrono" ] }
argon2 = "0.4"
rand = "0.8.5"
uuid = { version="1.2.2", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
